fix: mobile logo distortion (#35)
Fixing reported bug #30

--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -33,6 +33,7 @@
   .nav-logo {
     margin-top: -22px;
     max-height: 70px !important;
+    max-width: 173px !important;
   }
 
   .mobile-reordered {
